# spectrum

./: .clang-format  .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  LICENSE  README.md  codecov.yml  com.github.v1nns.spectrum.yml  sonar-project.properties
.github/workflows/: ci.yml  tests.yml
assets/: spectrum.mov
include/: error_code.h  error_table.h  wave.h
include/audio/: command.h  player.h
include/audio/base/: analyzer.h  decoder.h  equalizer.h  notifier.h  playback.h
include/audio/debug/: dummy_analyzer.h  dummy_decoder.h  dummy_playback.h
include/audio/driver/: alsa.h  decoder.h  ffmpeg.h  fftw.h
include/audio/lyric/: lyric_finder.h  search_config.h
include/audio/lyric/base/: html_parser.h  url_fetcher.h
include/audio/lyric/driver/: curl_wrapper.h  libxml_wrapper.h
include/controller/: media.h  player.h
include/debug/: dummy_analyzer.h  dummy_decoder.h  dummy_fetcher.h  dummy_parser.h  dummy_playback.h
include/driver/: alsa.h
include/error/: error_table.h
include/middleware/: media_controller.h
include/model/: application_error.h  audio_filter.h  bar_animation.h  block_identifier.h  global_resource.h  playlist.h  playlist_operation.h  question_data.h  song.h  stream_info.h  volume.h  wave.h
include/sound/: song.h  wave.h
include/ui/: block.h  colors.h  common.h  terminal.h
include/ui/base/: block.h  terminal.h
include/ui/block/: file_info.h  list_dir.h  list_directory.h
include/ui/module/: file_info.h
include/util/: arg_parser.h  file_handler.h  formatter.h  logger.h  sink.h
include/view/base/: action_listener.h  block.h  block_event.h  custom_event.h  dialog.h  element.h  event_dispatcher.h  interface_notifier.h  keybinding.h  listener.h  notifier.h  terminal.h
include/view/block/: audio_player.h  audio_visualizer.h  file_info.h  list_directory.h  main_content.h  main_tab.h  media_player.h  sidebar.h  tab_viewer.h
include/view/block/main_content/: audio_equalizer.h  song_lyric.h  spectrum_visualizer.h
include/view/block/sidebar_content/: list_directory.h  playlist_manager.h  playlist_viewer.h
include/view/block/tab_item/: audio_equalizer.h  song_lyric.h  spectrum_visualizer.h
include/view/element/: button.h  dialog.h  error_dialog.h  focus_controller.h  frequency_bar.h  help.h  help_dialog.h  menu.h  playlist_dialog.h  question_dialog.h  style.h  tab.h  tab_item.h  text_animation.h  util.h
include/view/element/internal/: base_menu.h  file_menu.h  menu.h  playlist_menu.h  song_menu.h  text_menu.h
include/web/base/: html_parser.h  stream_fetcher.h  url_fetcher.h
include/web/driver/: curl_wrapper.h  libxml_wrapper.h  ytdlp_wrapper.h
src/: CMakeLists.txt  main.cc  wave.cc
src/audio/: command.cc  player.cc
src/audio/driver/: alsa.cc  decoder.cc  ffmpeg.cc  fftw.cc
src/audio/lyric/: lyric_finder.cc  search_config.cc
src/audio/lyric/driver/: curl_wrapper.cc  libxml_wrapper.cc
src/controller/: media.cc  player.cc
src/driver/: alsa.cc
src/middleware/: media_controller.cc
src/model/: audio_filter.cc  bar_animation.cc  block_identifier.cc  playlist.cc  playlist_operation.cc  question_data.cc  song.cc  stream_info.cc  wave.cc
src/prototype/: CMakeLists.txt  base.py  dummy.cc  dummy_old.cc
src/sound/: wave.cc
src/ui/: block.cc  terminal.cc
src/ui/base/: block.cc  block_event.cc  terminal.cc
src/ui/block/: file_info.cc  list_dir.cc  list_directory.cc
src/ui/module/: file_info.cc
src/util/: arg_parser.cc  file_handler.cc  logger.cc  sink.cc
src/view/base/: block.cc  block_event.cc  custom_event.cc  dialog.cc  element.cc  keybinding.cc  terminal.cc
src/view/block/: audio_player.cc  audio_visualizer.cc  file_info.cc  list_directory.cc  main_content.cc  main_tab.cc  media_player.cc  sidebar.cc  tab_viewer.cc
src/view/block/main_content/: audio_equalizer.cc  song_lyric.cc  spectrum_visualizer.cc
src/view/block/sidebar_content/: list_directory.cc  playlist_manager.cc  playlist_viewer.cc
src/view/block/tab_item/: audio_equalizer.cc  song_lyric.cc  spectrum_visualizer.cc
src/view/element/: button.cc  dialog.cc  error_dialog.cc  focus_controller.cc  frequency_bar.cc  help.cc  help_dialog.cc  menu.cc  playlist_dialog.cc  question_dialog.cc  tab.cc  tab_item.cc  text_animation.cc
src/view/element/internal/: file_menu.cc  playlist_menu.cc  song_menu.cc  text_menu.cc
src/web/driver/: curl_wrapper.cc  libxml_wrapper.cc  ytdlp_wrapper.cc
test/: CMakeLists.txt  audio_lyric_finder.cc  audio_player.cc  block.cc  block_audio_visualizer.cc  block_file_info.cc  block_list_directory.cc  block_main_content.cc  block_main_tab.cc  block_media_player.cc  block_sidebar.cc  block_tab_viewer.cc  dialog_playlist.cc  driver_fftw.cc  list_directory.cc  middleware_controller.cc  middleware_media_controller.cc  player.cc  sync_testing.h  util_argparser.cc  utils.h
test/general/: block.h  dialog.h  sync_testing.h  utils.h
test/mock/: analyzer_mock.h  audio_control_mock.h  decoder_mock.h  event_dispatcher_mock.h  file_handler_mock.h  html_parser_mock.h  interface_notifier_mock.h  list_directory.h  list_directory_mock.h  lyric_finder_mock.h  playback_mock.h  player_mock.h  url_fetcher_mock.h
